slight spacing fix

--- a/user/themes/isrtheme/css/custom.css
+++ b/user/themes/isrtheme/css/custom.css
@@ -114,4 +114,8 @@ form .buttons button:hover{
 .pure-g [class *="pure-u"]{
 	font-family: "Raleway", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
 }
+
+#author-info{
+	margin-bottom: 10px;
+}
 	
